--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
