--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
         max-wait: 1ms      # 最长阻塞等待时间
         max-idle: 4        # 最大空闲连接数
         min-idle: 0        # 最小空闲连接数
+  cache:
+    redis:
+      time-to-live: 180000
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
